bk_ida/gccida/c2/announce_function
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/announce_function/src/diagnostic.c:1545:11: error: use of undeclared identifier 'off_6763D0'
verbatim( off_6763D0, v1); 
          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/announce_function/src/obj/diagnostic.o] Error 1
